corrected more things

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -77,11 +77,7 @@ Leiden Observatory, Leiden University, Niels Bohrweg 2, 2333 CA Leiden, The Neth
    \date{Received XXX; accepted XXX}
 
   \abstract
-   {Cosmic shear proves to be a powerful tool to study the properties of the Universe. The discrepancy in the parameter $S_8 = \sigma_8\sqrt{\Omega_{\rm{m}}/0.3}$ between measurements in the low-redshift large-scale structure and the cosmic microwave background motivates further investigation of yet unaccounted systematic biases. 
-   Ground-based surveys are subject to a variation in depth caused by varying atmospheric conditions; we investigate and quantify the resulting effects. In particular, we check whether they introduce a bias to the resulting cosmological parameters and if they can be responsible for the occurrence of B-modes.
-   We construct a semi-analytic model to estimate the impact on the shear correlation functions and analyse the implications for cosmological parameters. Furthermore, we construct COSEBIs from the correlation functions to quantify the occurring B-modes.
-   For the Kilo-Degree Survey this effect introduces an error in $\xi_\pm$ of the order of a few percent on small scales. We find that the resulting bias in $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ will be significant at the level of about $1\sigma$ in next-generation cosmic shear surveys. We find that the dependence of this effect on the underlying cosmology is not negligible. We also report the occurrence of B-modes, although at a level that is more than one order of magnitude below the current statistical uncertainties.
-   We conclude that the effects of varying depth for current cosmic shear surveys on cosmological parameters are not yet significant, but should be accounted for in next-generation experiments. \textcolor{blue}{\href{https://docs.google.com/document/d/13j7fUE8jrK5HOVbf4p0HdQs6c14jbWtm9Yq8CtLZCK4/edit?usp=sharing}{[Link to the current google doc]}}}
+   {We present a semi-analytic model for the shear two-point correlation function of a cosmic shear survey with non-uniform depth. Ground-based surveys are subject to depth variations that primarily arise through varying atmospheric conditions. For a survey like the Kilo-Degree Survey (KiDS), we find that the measured depth variation increases the amplitude of the observed shear correlation function at the level of a few percent out to degree-scales, relative to the assumed uniform-depth case. The impact on the inferred cosmological parameters is shown to be insignificant for a KiDS-like survey. For next-generation cosmic shear experiments, however, we conclude that variable depth should be accounted for. \textcolor{blue}{\href{https://docs.google.com/document/d/13j7fUE8jrK5HOVbf4p0HdQs6c14jbWtm9Yq8CtLZCK4/edit?usp=sharing}{[Link to the current google doc]}}}
 
    \keywords{gravitational lensing --
                 weak lensing --
@@ -97,9 +93,9 @@ The discovery of cosmic shear has provided us with a new and powerful cosmologic
 
 %It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis by \citet{2018arXiv180706209P}. While their analysis determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from an analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data, and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Reweighting the obtained redshifts of data from DES and combining this with KiDS data \citep[][Asgari et al.~in prep.]{Joudaki:2019}, yields even higher tension with the value determined for $S_8$ by the Planck Collaboration. This discrepancy has received a lot of attention. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
 
-For current cosmic shear surveys, the estimated systematic error is becoming comparable in size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary \citep[][hereafter H17]{2017MNRAS.465.1454H}. With surveys like the Large Synoptic Survey Telescope \citep[LSST,][]{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}.
+For current cosmic shear surveys, the estimated systematic error is becoming comparable in size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary. With surveys like the Large Synoptic Survey Telescope \citep[LSST,][]{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep[see][and references therein]{Mandelbaum:2019}.
 
-In this paper we focus on systematic effects induced by variation in survey depth that is so far unaccounted for in cosmic shear analyses \citep{Vale:2004}.   For a fixed exposure time survey, varying atmospheric conditions, dithering strategies and galactic extinction all contribute to an inhomogeneous limiting magnitude as a function of sky position.   In order to assess the impact of variable depth for current and future surveys we build an analytical model for the effect based on the survey specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}.  To first order, the depth variation in KiDS can be modelled by a piece-wise constant depth function, which varies between each $1\,\text{deg}^2$ square pointing.   KiDS object detection is defined in the $r-band$ as these images were chosen to be significantly deeper in comparison to the other optical and near-infra red filters.   We therefore quantify survey depth with the limiting $r$-band magnitude, as defined in \citet{2017A&A...604A.134D}.  We defer the study of multi-band variable depth and its impact on photometric redshift accuracy for future work.
+In this paper we focus on systematic effects induced by variation in survey depth that is so far unaccounted for in cosmic shear analyses \citep{Vale:2004}.   For a fixed exposure time survey, varying atmospheric conditions, dithering strategies and galactic extinction all contribute to an inhomogeneous limiting magnitude as a function of sky position.   In order to assess the impact of variable depth for current and future surveys we build an analytical model for the effect based on the survey specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}.  To first order, the depth variation in KiDS can be modelled by a piece-wise constant depth function, which varies between each $1\,\text{deg}^2$ square pointing.   KiDS object detection is defined in the $r$-band as these images were chosen to be significantly deeper in comparison to the other optical and near-infra red filters.   We therefore quantify survey depth with the limiting $r$-band magnitude, as defined in \citet{2017A&A...604A.134D}.  We defer the study of multi-band variable depth and its impact on photometric redshift accuracy for future work.
 
 %The depth of a pointing primarily influences the number density as well as the average redshift of galaxies, meaning that a variation in depth is responsible for a correlation between those two quantities (see Fig. \ref{fig:nz_of_meanz}).
 %
@@ -249,7 +245,7 @@ g^i_m(\chi) =& \int_\chi^{\chi_{\rm{H}}} {\rm d}\chi' \, \mathcal{L}^i_m(\chi') 
 Here, $J_n$ denote the $n$-th order Bessel Functions, $f_K(\chi)$ is the comoving angular diameter distance and $\chi_{\rm{H}}$ is the comoving distance to the horizon. The parameters $H_0$ and $c$ denote the Hubble constant and the speed of light.
 
 Using Eq.~\eqref{eq:xipm-pkappa}, we can compute the model correlation functions, $\xi_{\pm,mn}^{ij}(\theta)$, for each pair of quantiles $m,n$ and redshift bins $i,j$.\footnote{For the calculation of the shear correlation functions we use \textsc{Nicaea} \citep{2009A&A...497..677K}. %\citep{10.1093/mnras/stx2082}.
-For the power spectrum on nonlinear scales, we use the method of \citet{2012ApJ...761..152T}.} When measuring the shear correlation functions of a survey, we take the weighted average of tangential and cross shears of all pairs of galaxies (see H17). If, for a single pair of galaxies, one galaxy lies in the $m$-th quantile of redshift bin $i$ and the second one lies in the $n$-th quantile of redshift bin $j$, then their contribution to the observed correlation functions is, on average, $\xi_{\pm,mn}^{ij}(\theta)$. This means that if we know each of those single correlation functions, we can reconstruct the total correlation functions via a weighted average of the single functions. Formally, we define \begin{equation}
+For the power spectrum on nonlinear scales, we use the method of \citet{2012ApJ...761..152T}.} When measuring the shear correlation functions of a survey, we take the weighted average of tangential and cross shears of all pairs of galaxies \citep[see][]{2017MNRAS.465.1454H}. If, for a single pair of galaxies, one galaxy lies in the $m$-th quantile of redshift bin $i$ and the second one lies in the $n$-th quantile of redshift bin $j$, then their contribution to the observed correlation functions is, on average, $\xi_{\pm,mn}^{ij}(\theta)$. This means that if we know each of those single correlation functions, we can reconstruct the total correlation functions via a weighted average of the single functions. Formally, we define \begin{equation}
 \xi_\pm^{ij,\rm{obs}}(\theta) = \frac{\sum_{m,n} \mathcal{P}_{mn}^{ij}(\theta)\,\xi_{\pm,mn}^{ij}(\theta)}{\sum_{m,n} \mathcal{P}_{mn}^{ij}(\theta)}\, ,
 \label{eq:def_xiobs}
 \end{equation}
@@ -321,7 +317,7 @@ While the first method suffers from the fact that the power-law index only holds
 
 In this Section we calculate both the analytic (Eq.~\ref{eq:xipm_analytic}) and semi-analytic (Eq.~\ref{eq:correctionfunction2}) models for the shear correlation function from a KiDS-like variable depth survey.   We adopt the tomographic bins defined in H18 and their resulting best-fit cosmological parameters to present, in Fig.~\ref{fig:all_xis}, the ratio between our models for the observed correlation functions $\xi_\pm^{\rm{obs}}$, and the standard theoretical prediction that assumes uniform depth. We find that the level of variation in the depth of the KiDS survey increases the amplitude of the observed shear correlation function, on sub-pointing scales, by up to 5\% relative to the uniform-depth case.
 
-We compare our models to mock KiDS-like data created using a modified version of the Full-sky Lognormal Astro-fields Simulation Kit \citep[\sc{FLASK},][Joachimi, Lin, et al. in prep.]{Xavier:2016}.  Using {\sc{FLASK}} lognormal fields, we generate galaxy mocks with coherent clustering and lensing signals.   Adopting a linear relation between the limiting $r$-band magnitude and the effective number density, fit to the KiDS data, we imprint the variable depth of the full KiDS-1000 footprint \citep{Kuijken:2019} on a {\sc{Healpix}}\footnote{\url{https://healpix.sourceforge.io}} grid of Nside=4096.  Our resolution choice represents a compromise between minimising the mock computation time and maximising the accuracy of the recovered shear signal at small angular scales. With Nside=4096, $\xi_+$ is accurate to 7\% above $\sim 1$ arcmin, and $\xi_-$ is accurate to 10\% above $\sim6$ arcmin.   For each {\sc{Healpix}} pixel in the KiDS-1000 data, the limiting $r$-band magnitude defines the effective number density of sources, and the average source redshift distribution for each tomographic redshift bin (see Fig.~\ref{fig:nofz_quantiles}).  In the uniform depth case, redshifts and number densities are sampled from the average of these tomographic sets.  The ratio of the lensing signals from the two mocks is computed, averaged over 2000 shape-noise-free realizations, and is shown in Fig.~\ref{fig:all_xis} (red).
+We compare our models to mock KiDS-like data created using a modified version of the Full-sky Lognormal Astro-fields Simulation Kit \citep[\textsc{FLASK},][Joachimi, Lin, et al. in prep.]{Xavier:2016}.  Using {\sc{FLASK}} lognormal fields, we generate galaxy mocks with coherent clustering and lensing signals.   Adopting a linear relation between the limiting $r$-band magnitude and the effective number density, fit to the KiDS data, we imprint the variable depth of the full KiDS-1000 footprint \citep{Kuijken:2019} on a {\sc{Healpix}}\footnote{\url{https://healpix.sourceforge.io}} grid of Nside=4096.  Our resolution choice represents a compromise between minimising the mock computation time and maximising the accuracy of the recovered shear signal at small angular scales. With Nside=4096, $\xi_+$ is accurate to 7\% above $\sim 1$ arcmin, and $\xi_-$ is accurate to 10\% above $\sim6$ arcmin.   For each {\sc{Healpix}} pixel in the KiDS-1000 data, the limiting $r$-band magnitude defines the effective number density of sources, and the average source redshift distribution for each tomographic redshift bin (see Fig.~\ref{fig:nofz_quantiles}).  In the uniform depth case, redshifts and number densities are sampled from the average of these tomographic sets.  The ratio of the lensing signals from the two mocks is computed, averaged over 2000 shape-noise-free realizations, and is shown in Fig.~\ref{fig:all_xis} (red).
 
 The results can be seen in Fig.~\ref{fig:all_xis}.
   \begin{figure*}
@@ -330,10 +326,7 @@ The results can be seen in Fig.~\ref{fig:all_xis}.
   \caption{The ratio of correlation functions measured for a uniform depth survey, $\xi_\pm$, and a KiDS-like variable depth survey, $\xi_\pm^{\rm obs}$, cross-correlating five tomographic bins (as denoted in the upper left corner of each panel). Results from mock KiDS-like data (red) can be compared to analytic models from Sect.~2 (average redshift weighting in green-solid, and auto-correlation $\xi_+$ weighting in green-dashed) and the semi-analytic model from Sect.~4 (blue). Mock data is limited to the angular regime which is not significantly impacted by resolution effects.The upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$. Note that the seemingly better agreement between the mocks and the analytic method is purely coincidental.}
   \label{fig:all_xis}
   \end{figure*}
-%We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.
-We observe that for high-redshift bins, both analytic methods as well as the semi-analytic one yield consistent results. Due to the redshift-dependent index in the power law of the first analytic method, it is not able to accurately describe the effect for low redshift bins. 
-%The second analytic method, however, traces the semi-analytic one pretty well for $\xi_+$.
-The second analytic model is entirely dependent on the choice of $\theta_{\rm{ref}}$. For $\theta_{\rm{ref}}=11'$, as chosen here, both analytic models agree very well for all redshift bins. For $\theta_{\rm{ref}}=0.\!'5$, the second analytic method agrees with the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}, the analytic method is not able to trace this change for any choice of $\theta_{\rm{ref}}$. Furthermore we note that the effect seems to be strongest in the first redshift bin, which is not surprising, as there the average redshift between pointings varies the most (compare Fig. \ref{fig:nz_of_meanz}).
+We observe that for high-redshift bins, all methods yield consistent results. For low-redshift bins, there are some serious discrepancies between the different models. The average-redshift weighted analytic model is only valid for high redshifts, whereas the auto-correlation $\xi_+$ weighted model is entirely dependent on the choice of $\theta_{\rm{ref}}$. For $\theta_{\rm{ref}}=11'$, as chosen here, both analytic models agree very well for all redshift bins. For $\theta_{\rm{ref}}=0.\!'5$, the second analytic method agrees with the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}, the analytic method is not able to trace this change for any choice of $\theta_{\rm{ref}}$. Furthermore we note that the effect seems to be strongest in the first redshift bin, which is not surprising, as there the average redshift between pointings varies the most (compare Fig. \ref{fig:nz_of_meanz}).
 
 The simulations and the models seem to be in relatively good agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity at large scales, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. %Furthermore, we notice some strong features in the simulations at lower values of $\theta$, which arise due to the resolution limit of the simulations.  %As the noise of the simulated correlation functions increases for decreasing $\theta$,\footnote{The logarithmic bins for the correlation functions were chosen in H17 such that the signal-to-noise ratio is roughly equal for each bin. However, in the simulations we ignore shape-noise, such that our only noise contribution is sample variance, which increases at lower $\theta$.} and we take the ratio of two functions that are subject to noise, these features can be attributed to sample variance. 
 In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations follow a finer magnitude-binning for the number densities of galaxies. Due to the fact that the discrepancies arise predominantly on small scales, the most likely reason for the discrepancy is that the simulations take the full variations in depth into account, which include scales smaller than one pointing (especially chip positions and dithering strategies). While it is impossible to include the entire sub-pointing variations in depth into our models, we tested a sub-division of one pointing into four smaller ones, all of which have a similar depth; this lowered the tension between models and simulation. Furthermore, we tested a coarser magnitude-binning in our models, which increased the tension. These tests suggest that both small-scale effects and a finer magnitude binning at least partly negate the varying depth between pointings. Note that the seemingly better agreement between mocks and the analytic method is purely coincidental.
@@ -347,7 +340,7 @@ An additional difference between the models and simulations is that in the model
 \begin{subfigure}{0.45\textwidth}
   \includegraphics[width=\textwidth]{images/mcmc_euclid.pdf}
 \end{subfigure}
-\caption{Results of the MCMC simultation to estimate the bias caused by a variation of depth in a cosmic shear survey for a KiDS450-like (left) and KiDS$15\,000$-like survey (right). The left simulation was computed using the covariance matrix of H18. As Euclid will cover approx. $15\,000\,\rm{deg}^2$, the covariance matrix of the KiDS$15\,000$-like survey is the one of H18 divided by 30. Note that this does not include the higher number density and better shape measurements of Euclid, so that this figure constitutes an extremely conservative estimate on this effect for Euclid. Both simulations were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
+\caption{Recovered cosmological parameters for a variable-depth (Observed) and uniform-depth (Reference) KiDS-$450$-like (left) and KiDS-$15\,000$-like survey (right). The left simulation was computed using the covariance matrix of H18. For the KiDS$15\,000$-like survey, we divided the one of H18 by 30. This approximately accounts for the increased survey area of next-generation experiments, but does not factor in the increased number density and better shape measurements, so that this figure constitutes a conservative estimate on this effect for Euclid and LSST. Both figures were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
 \label{fig:mcmc_results}
 \end{figure*} 
 
@@ -355,7 +348,8 @@ An additional difference between the models and simulations is that in the model
 
 As the next step we want to assess how the observational depth variations propagate to cosmological parameters inferred from $\xi_\pm^{ij,\rm{obs}}$ compared to $\xi_\pm^{ij}$. For this test we choose a fiducial cosmology, $\b \Phi$, and determine the relative change in $\Omega_{\rm m}$ and $\sigma_8$ compared to a reference setup with uniform depth. All other cosmological parameters are kept fixed. First, we compute the reference correlation functions, $\xi_\pm^{ij}(\theta,\b\Phi)$, for each pair of redshift bins $i,j$ using \textsc{Nicaea} as described in Sec.~\ref{sec:xipm_semianalytic}. Then we derive the observed correlation functions, $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$, from Eq.~(\ref{eq:correctionfunction2}). Using the Markov-Chain Monte Carlo sampler \textsc{emcee}, we sample correlation functions $\xi_\pm^{ij}(\theta,\b\Phi')$ for different cosmologies $\b\Phi'$ and find the likelihood distribution, given the data vector $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ and the covariance-matrix computed in H18. This yields an estimate of the shift in $\Omega_{\rm m}$ and $\sigma_8$ introduced by varying depth.
 
-As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30 to model a a KiDS$15\,000$-like survey, which approximately accounts for the increased survey area of LSST and Euclid with respect to KV450. Here, the impact on $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ is significant at the level of approximately $1\sigma$. As our modified covariance-matrix does not account for higher number densities and better shape measurements, this is just a lower estimate; the real effect will probably be up to twice as big. We note that even though Euclid is a space-based mission, and therefore will not suffer from variable atmospheric effects, the key photometric redshift measurement uses data from several ground-based surveys, including KiDS.   Placing a selection criteria on redshift estimation success will therefore lead to depth variations in the source galaxy sample. While the data from LSST will be practically free of variations in depth after 10 years of observations, the first few years data will include significant depth variation. The impact may be even stronger than the KiDS-like analysis presented here as the multi-band KiDS depth variation was minimised using seeing-dependent data acquisition. This is in contrast to the seeing-agnostic multi-band cadence of LSST.
+As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties for a KiDS-$450$-like survey. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30 to model a KiDS-$15\,000$-like survey, which approximately accounts for the increased survey area of LSST and Euclid with respect to KiDS-450. Here, the impact on $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ is significant at the level of approximately $1\sigma$. As our modified covariance-matrix does not account for the factor of $\sim 4$ expected increase in galaxy number density for LSST and Euclid , we note that this likely to be a lower estimate for the significance of the effect.
+ We note that even though Euclid is a space-based mission, and therefore will not suffer from variable atmospheric effects, the key photometric redshift measurement uses data from several ground-based surveys, including KiDS.   Placing a selection criteria on redshift estimation success will therefore lead to depth variations in the source galaxy sample. While the data from LSST will be practically free of variations in depth after 10 years of observations, the first few years data will include significant depth variation. The impact may be even stronger than the KiDS-like analysis presented here as the multi-band KiDS depth variation was minimised using seeing-dependent data acquisition. This is in contrast to the seeing-agnostic multi-band cadence of LSST.
 
 
 Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependence on the cosmology, which can be seen in Figure \ref{fig:comparecosmo}. For various combinations of $\Omega_{\rm{m}}$ and $\sigma_8$ within the $95\%$ confidence limit of KV450, we report a variation in $\xi_\pm/\xi_\pm^{\rm{obs}}$ of a few percentage points on small scales.
@@ -388,7 +382,7 @@ With our semi-analytic model we describe the impact of varying depth in ground-b
 \item In our MCMC runs we did not account for degeneracies with other cosmological parameters or observational effects. Especially intrinsic alignments and baryon feedback also modify the correlation functions primarily on small scales, so they are likely to be degenerate with the effect of varying depth \citep{Troxel:2015}. In an MCMC run that includes these nuisance parameters, we suspect that the parameters for intrinsic alignments and baryon feedback change to mitigate this effect, so that the impact on cosmological parameters will be smaller than in our results. %Furthermore, when including the effects of dark energy we notice that our observation of $S_8$ being constant is no longer valid: For a `Euclid-like' survey we notice a bias of $\sim 0.8\sigma$. This gives rise to the assumption that the results of an MCMC with the full parameter space, including observational effects, will differ from our results. 
 \end{enumerate}
 
-Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. In particular this means that a varying depth cannot explain the discrepancy between observations of the low-redshift Universe and results from analysis of the CMB.
+Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. In particular this means that a varying depth cannot explain the tension between observations of the low-redshift Universe and results from analysis of the CMB.
 
 For next-generation surveys like Euclid and LSST we have demonstrated that if variable depth in unaccounted for in the analysis, the resulting bias is likely to be significant. A detailed LSST and Euclid study that uses a realistic variation of depth should therefore be conducted. If these studies reach a similar conclusion, variable-depth bias could be circumvented in likelihood analyses by including a cosmology-dependent correction for this effect using the semi-analytical model presented in this paper (see Fig. \ref{fig:comparecosmo}).
 
@@ -403,17 +397,19 @@ The variations in depth will also affect the covariance of a survey, both becaus
 \begin{acknowledgements}
 The results in this paper are based on observations made with ESO Telescopes at the La Silla Paranal Observatory under programme IDs 177.A-3016, 177.A-3017, 177.A-3018 and 179.A-2004, and on data products produced by the KiDS consortium. The KiDS production team acknowledges support from: Deutsche Forschungsgemeinschaft, ERC, NOVA and NWO-M grants; Target; the University of Padova, and the University Federico II (Naples).
 \\
-\emph{Author contributions:} All authors contributed to the development and writing of this paper. The authorship list is given in two groups: the lead authors (SH, PS, HHi) followed by key contributors to the scientific analysis in alphabetical order.
+We acknowledge support from the European Research Council under grant numbers 770935 (HH,JLvdB) and 647112 (CH,MA,CL).
 \\
-H. Hildebrandt is supported by a Heisenberg grant of the Deutsche Forschungsgemeinschaft (Hi 1495/5-1) as well as an ERC Consolidator Grant (No. 770935).
+H. Hildebrandt is supported by a Heisenberg grant of the Deutsche Forschungsgemeinschaft (Hi 1495/5-1).
 \\
-CH acknowledges support from the European Research Council under grant number 647112, and support from the Max Planck Society and the Alexander von Humboldt Foundation in the framework of the Max Planck-Humboldt Research Award endowed by the Federal Ministry of Education and Research. 
+CH acknowledges support from the Max Planck Society and the Alexander von Humboldt Foundation in the framework of the Max Planck-Humboldt Research Award endowed by the Federal Ministry of Education and Research. 
 \\
 KK acknowledges support by the Alexander von Humboldt Foundation.
 \\
 Some of the results in this paper have been derived using the HEALPix \citep{2005ApJ...622..759G} package.
 \\
 This research has made use of NASA's Astrophysics Data System and adstex (\url{https://github.com/yymao/adstex}).
+\\
+\emph{Author contributions:} All authors contributed to the development and writing of this paper. The authorship list is given in two groups: the lead authors (SH, PS, HHi) followed by key contributors to the scientific analysis in alphabetical order.
 \end{acknowledgements}
 
 \bibliographystyle{aa}
